--- a/css/index.css
+++ b/css/index.css
@@ -1,141 +1,105 @@
-/* 全局简单样式设定 */
 * {
 	margin: 0;
 	padding: 0;
-	font-family: '微软雅黑';
 }
-html, body, .wrap{
-	width: 100%;
+html, body, .wrap {
 	height: 100%;
-	font-size: 12px;
+	position: relative;
 	background: black;
-	background: url('../img/Index/1.jpg') no-repeat fixed center;
-	background-size: cover;
+	overflow: hidden;
 }
 
-/* 标题栏 */
+
 .header {
+	height: 60px;
+	width: 100%;
 	background: black;
-	color: #B8F3FF;
+	position: fixed;
+	top: 0;
+	z-index: 999;
 }
 .header .headerWrap {
+	height: 100%;
 	width: 85%;
 	margin: 0 auto;
 }
-.headerWrap img {
-	width: 48px;
-	height: 48px;
-	display: inline-block;
-	margin-right: 10px;
-	vertical-align: middle;
-}
 .headerWrap span {
-	font-size: 3em;
-	line-height: 1.5em;
+	float: left;
+	line-height: 55px;
+	font-size: 35px;
+	font-weight: bolder;
+	color: white;
+	margin-left: 10px;
+}
+.headerWrap img {
+	margin-top: 5px;
+	float: left;
+	width: 60px;
 }
 .headerWrap ul {
 	float: right;
+	height: 100%;
 }
 .headerWrap li {
-	list-style: none;
 	float: left;
-	font-size: 18px;
-	line-height: 55px;
-	padding: 0 20px;
-	transition: all 1s;
+	width: 100px;
+	line-height: 60px;
+	list-style: none;
+	margin: 0 5px;
+	text-align: center;
 }
 .headerWrap li a {
-	text-decoration: none;
-	color: #B8F3FF;
-}
-.headerWrap li:hover {
-	background: #63768D;
-}
-
-/* 页面主体（麻烦） */
-article, .body {
-	width: 85%;
-	margin: 0 auto;
-	min-height: 100%; /* 技巧 */
-	margin-top: -110px;
-}
-
-/* 导航栏 */
-.body ul {
-	width: 200px;
-	margin-top: 110px;
-	float: left;
-}
-.body ul li {
-	list-style: none;
-	width: 200px;
-	height: 200px;
-	text-align: center;
-	background: transparent;
-	transition: all 1s;
-	position: relative;
-}
-.body ul li:hover {
-	background: rgba(255,255,255,0.5);
-	cursor: pointer;
-}
-.body ul li a {
-	display: inline-block;
+	display: block;
 	width: 100%;
 	height: 100%;
+	color: gray;
 	text-decoration: none;
-	font-size: 5em;
-	line-height: 200px;
-	color: transparent;
-	transition: all 1s;
+	font-weight: bolder;
+	transition: all .3s ease;
 }
-.body ul li:hover > a {
- 	color: #B8F3FF;
-}
-.body ul li:hover > span {
+.headerWrap li a:hover {
 	color: white;
+	transform: scale(1.5);
 }
-.body ul li span {
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	font-size: 1.5em;
-	color: transparent;
+
+article {
+	height: 100%;
+}
+.swiper-container {
+	height: 100%;
 	position: absolute;
-	left: 50px;
-	bottom: 30px;
-	transition: all 1s;
+	z-index: 1;
+}
+.swiper-slide {
+	background-position: center;
+	background-size: cover;
 }
 
-/* 页脚 */
-.footer {
+.pic1 {
+	display: block;
+	width: 400px;
+	height: 400px;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin-left: -200px;
+	margin-top: -200px;
 	color: white;
-	height: 55px;
-	background: black;
-	font-size: 1.2em;
-	line-height: 55px;
 	text-align: center;
-	clear: both;
+	line-height: 400px;
+	font-size: 200px;
+	text-decoration: none;
 }
 
-/* 图片栏 */
-.pic ul {
-	margin-top: 110px;
-	float: right;
-}
-.pic li {
-	list-style: none;
-	width: 200px;
-	height: 200px;
-	line-height: 200px;
-	opacity: 0;
-	transition: all 1s;
-}
-.pic li img {
-	max-width:100%;
-	max-height:100%;
-	vertical-align: middle;
-}
-.pic li:hover {
-	opacity: 1;
+.footer {
+	height: 30px;
+	width: 100%;
+	color: white;
+	font-size: 12px;
+	line-height: 30px;
+	text-align: center;
+	background: black;
+	position: fixed;
+	z-index: 999;
+	bottom: 0;
 }
